--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
               <!-- error msg -->
               <div id="error-box" class="text-center mt-5">
                 <p class="fs-3 text-danger">Please input a valid value</p>
-                <div>
-                  <img id="spinner" src="./img/spinner.gif" alt="" />
+              </div>
+              <!-- spinner -->
+              <div id="spinner">
+                <div class="spinner-img">
+                  <img class="text-center" src="./img/spinner.gif" alt="" />
                 </div>
               </div>
               <!-- display drink -->
